fix(sonar): resolve all 32 code smells — zero open issues
Java:
- assertThrows lambdas refactored to single throwing call (GoalTest, InventoryItemTest)
- LocalDate.of() month literals replaced with Month.JUNE/JANUARY constants (all test files)
- Unused/useless 'paused' variable removed (GoalServiceTest)
- Stream.collect(Collectors.toList()) -> Stream.toList() (DashboardSnapshotRepository)
- Map.containsKey() + put() -> computeIfAbsent() (ProjectionCalculationEngine)
- LocalDate.now() -> LocalDate.now(ZoneId.of("Asia/Kolkata")) for IST (ProjectionCalculationEngine)
- Instant.now() in tests replaced with fixed TEST_INSTANT constant (ProjectionResourceTest)

JavaScript:
- <div role="progressbar"> replaced with native <progress> element (Goals.js)
- PropTypes added for snapshots prop (Dashboard.js SnapshotSummary)

Result: 0 SonarQube open issues (down from 32 MAJOR/MINOR/INFO)

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>